devquotes.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devquotes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devquotes
  namespace: devquotes
  labels:
    app: devquotes
spec:
  replicas: 0
  selector:
    matchLabels:
      app: devquotes
  template:
    metadata:
      labels:
        app: devquotes
    spec:
      containers:
      - name: devquotes
        image: docker.io/brokenpip3/devquotes:latest
        ports:
        - name: http-port
          containerPort: 8080    
        livenessProbe:
          httpGet:
            path: /healthz
            port: http-port
          initialDelaySeconds: 5
          periodSeconds: 3
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /healthz
            port: http-port
          initialDelaySeconds: 5
          periodSeconds: 3
          failureThreshold: 2
        resources:
          requests:
            cpu: 0.1
            memory: 100M
          limits:
            cpu: 0.5
            memory: 300M
---
apiVersion: v1
kind: Service
metadata:
  name: devquotes
  namespace: devquotes
  labels:
    app: devquotes
spec:
  selector:
    app: devquotes
  ports:
    - name: devquotes
      port: 8080
      protocol: TCP
