ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: nginx
    name: devquotes
    namespace: devquotes
spec:
    rules:
        - host: ENC[AES256_GCM,data:BGvTF9jjUiSMk34ZBmJ5wNsY+w==,iv:VzdVxZBb39Wy2yJwXlO8dEyXIfmENNGfeIG3d3V6VFQ=,tag:aDCMBO58AGGTij/w0+Q7sA==,type:str]
          http:
            paths:
                - backend:
                    serviceName: devquotes
                    servicePort: 8080
                  path: /
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-05-04T22:09:00Z"
    mac: ENC[AES256_GCM,data:qRuAlk7RGrSp/SlkWGCIrnBn0AHHMvZXNgKBlp1FcftMCu3L5fwipoDDJbZfXYOh1V60rqwoT4xNlDk61h7Bsngy9LyiflFjf0v3jS1cCCbbyzZ7WjKkSWe32e4Zaex1kN2wmy75V7pasUoMsOGLON/2xWr/A2jS1HaqBztUPi0=,iv:9xq6IGVoxoPOwyo6neiKGxfR+BCF4XUaWIiMO3RHR5Y=,tag:bBxShfaQariGIXP8O/GePw==,type:str]
    pgp:
        - created_at: "2021-05-04T22:09:00Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAwP8FxNnerN5AQ//Wo/ogmonZsV/TGI7WwJqo9VbhupIbgXs3zqN9/8Ej4V2
[...]
            D8W0DZt+Ue4mHGoa7XKGzI49WmuL4TWOQyBlmPyrOg==
            =guSS
            -----END PGP MESSAGE-----
          fp: FEE43962AC34E28FB078EFA9F6C9CFE02626638C
    encrypted_regex: ^(data|stringData|host|hosts)$
    version: 3.7.1
